# hello-cmake-cpp23

./: CMakeLists.txt  Justfile
src/example1/: main.cpp
